crates/permitlayer-core/tests/integration/snapshots/integration__policy_fixtures__calendar_write_allowed.snap
---
source: crates/permitlayer-core/tests/integration/policy_fixtures.rs
expression: decision
---
{
  "decision": "allow"
}
