crates/permitlayer-core/tests/integration/snapshots/integration__policy_fixtures__calendar_write_prompts.snap
---
source: crates/permitlayer-core/tests/integration/policy_fixtures.rs
assertion_line: 85
expression: decision
---
{
  "decision": "prompt",
  "policy_name": "calendar-prompt-on-write",
  "rule_id": "prompt-calendar-writes"
}
