crates/permitlayer-core/tests/integration/snapshots/integration__policy_fixtures__drive_other_resource_denied.snap
---
source: crates/permitlayer-core/tests/integration/policy_fixtures.rs
expression: decision
---
{
  "decision": "deny",
  "policy_name": "drive-research-scope-restricted",
  "rule_id": "default-deny-resource-out-of-allowlist",
  "denied_scope": null,
  "denied_resource": "some-other-folder"
}
