crates/permitlayer-core/tests/integration/snapshots/integration__policy_fixtures__gmail_read_allowed.snap
---
source: crates/permitlayer-core/tests/integration/policy_fixtures.rs
assertion_line: 63
expression: decision
---
{
  "decision": "allow"
}
