crates/permitlayer-core/tests/integration/snapshots/integration__policy_fixtures__gmail_write_denied.snap
---
source: crates/permitlayer-core/tests/integration/policy_fixtures.rs
assertion_line: 74
expression: decision
---
{
  "decision": "deny",
  "policy_name": "gmail-read-only",
  "rule_id": "default-deny-scope-out-of-allowlist",
  "denied_scope": "gmail.modify",
  "denied_resource": null
}
