crates/permitlayer-core/tests/integration/snapshots/integration__policy_fixtures__unknown_policy_default_denies.snap
---
source: crates/permitlayer-core/tests/integration/policy_fixtures.rs
assertion_line: 107
expression: decision
---
{
  "decision": "deny",
  "policy_name": "nope",
  "rule_id": "default-deny-unmatched-policy",
  "denied_scope": "gmail.readonly",
  "denied_resource": null
}
